infrastructure/kubernetes/ingress/api-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api-ingress
  namespace: car-marketplace
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - api.146.190.205.209.nip.io
      secretName: api-146-190-205-209-nip-io-tls
  rules:
    - host: api.146.190.205.209.nip.io
      http:
        paths:
          - path: /auth
            pathType: Prefix
            backend:
              service:
                name: user-service
                port:
                  number: 8081
          - path: /cars
            pathType: Prefix
            backend:
              service:
                name: listing-service
                port:
                  number: 8082
          - path: /predict
            pathType: Prefix
            backend:
              service:
                name: prediction-service
                port:
                  number: 8083
